업그레이드 컴컴

--- a/background/starbucks.html
+++ b/background/starbucks.html
@@ -5,10 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      section {
+        height: 300px;
+      }
       .section2 {
-        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg_new.jpg");
+        background-image: url("https://www.starbucks.co.kr/common/img/main/reserve_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section3 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section4 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section5 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section6 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section7 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
+      }
+      .section8 {
+        background-image: url("https://www.starbucks.co.kr/common/img/main/mob_fav_prod_bg.jpg");
+        background-position: right bottom;
+        background-attachment: fixed;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <section class="section1"></section>
+    <section class="section2"></section>
+    <section class="section3"></section>
+    <section class="section4"></section>
+    <section class="section5"></section>
+    <section class="section6"></section>
+    <section class="section7"></section>
+    <section class="section8"></section>
+  </body>
 </html>
