--- a/float/float1.html
+++ b/float/float1.html
@@ -13,6 +13,13 @@
        article .clearfix{
            clear:left;
        }
+       .img{
+        background-image: url("../images.naver.png");
+        width: 196px;
+        height: 62px;
+        text-indent: -9999;
+        margin-left: 0px;
+       }
    </style>
 </head>
 <body>
