--- a/float/float2.html
+++ b/float/float2.html
@@ -16,13 +16,13 @@
       }
 
       .box4 {
-        width: 500px;
-        height: 300px;
+        width: 150px;
+        height: 100px;
         background-color: red;
         color: white;
         font-size: 30px;
         margin: 10px;
-        clear: left;
+        float: left;
       }
     </style>
   </head>
