--- a/float/float7.html
+++ b/float/float7.html
@@ -6,17 +6,12 @@
     <title>Document</title>
     <style>
       * {
-        margin: 0px;
+        margin: 0px auto;
         padding: 0px;
       }
       .portpolio {
         background-color: black;
         width: 960px;
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: auto;
-        margin-right: auto;
-        float: left;
       }
       .portpolio li {
         float: left;
@@ -24,9 +19,10 @@
         width: 225px;
         height: 225px;
         margin-right: 20px;
+        margin-bottom: 20px;
         list-style: none;
       }
-      .portpolio li:last-child {
+      .portpolio li:nth-child(4n) {
         margin-right: 0;
       }
       .clearfix::after {
@@ -37,11 +33,19 @@
     </style>
   </head>
   <body>
-    <ul class="portpolio">
-      <li>>pic1</li>
-      <li>>pic2</li>
-      <li>>pic3</li>
-      <li>>pic4</li>
+    <ul class="portpolio clearfix">
+      <li>pic1</li>
+      <li>pic2</li>
+      <li>pic3</li>
+      <li>pic4</li>
+      <li>pic5</li>
+      <li>pic6</li>
+      <li>pic7</li>
+      <li>pic8</li>
+      <li>pic9</li>
+      <li>pic10</li>
+      <li>pic11</li>
+      <li>pic12</li>
     </ul>
   </body>
 </html>
