--- a/position/position5.html
+++ b/position/position5.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      .box {
-        border: 1px solid;
-        padding: 10px;
-        position: relative;
-      }
-      .a {
-        background-color: blue;
-        left: 50px;
-        top: 50px;
-      }
-      .b {
-        background-color: red;
-        left: 50px;
-        top: 50px;
-      }
+        .box{
+            border: 1px solid;
+            padding: 10px;
+            position: relative;
+        }
+        .a{
+            background-color: blue;
+            left:50px;
+            top: 50px;
+        }
+        .b{
+            background-color: red;
+            left:50px;
+            top: 50px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="box a">
-      <img src="http://placehold.it/100x120" alt="" />
+        <img src="http://placehold.it/100x120" alt="">
     </div>
     <div class="box b">
-      <img src="http://placehold.it/100x120" alt="" />
+        <img src="http://placehold.it/100x120" alt="">
     </div>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ea
-      blanditiis consectetur, soluta sint officia qui labore molestiae autem ex
-      iure doloribus, explicabo sit est? Officiis amet veniam nobis rerum!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero a necessitatibus dolores labore perspiciatis dolorem voluptatibus dolorum dicta ea commodi facilis, molestiae doloribus rem ut quia omnis maiores laudantium vel sint! Quasi rem ratione eaque eveniet atque aspernatur repellat, vel nemo odio exercitationem corrupti, quae molestias. Rerum voluptas ratione maxime a, amet voluptatum optio eos adipisci. Aliquam, perferendis officia ex dolorum reiciendis placeat itaque perspiciatis praesentium dignissimos sapiente aperiam nobis distinctio quibusdam quo quis iste. Quibusdam consequuntur deleniti placeat maiores distinctio beatae culpa. Blanditiis iusto porro maxime, temporibus ut vitae quia? Laboriosam consequatur blanditiis architecto harum veritatis fugiat. Voluptatum, commodi.
     </p>
-  </body>
+</body>
 </html>
