--- a/float/float1.html
+++ b/float/float1.html
@@ -4,30 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <style>
-       article .picture{
-           float: left;
-           margin-right: 20px;
-           margin-bottom:10px;
-       }
-       article .clearfix{
-           clear:left;
-       }
-       .img{
-        background-image: url("../images.naver.png");
-        width: 196px;
-        height: 62px;
-        text-indent: -9999;
-        margin-left: 0px;
-       }
-   </style>
+    <style>
+        article .picture{
+            float: left;
+            margin-right: 20px;
+            margin-bottom: 10px;
+        }
+        article .clearfix{
+            clear:left;
+        }
+    </style>
 </head>
 <body>
     <article>
         <div class="picture">
             <img src="http://placehold.it/200x200" alt="">
         </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. <div class="class"></div>Eum qui voluptates magnam consequatur distinctio placeat inventore eius minima dolore ratione est reprehenderit asperiores cupiditate beatae,ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae,ea possimus dolores neque.eatae,id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum qui voluptates magnam consequatur distinctio placeat inventore eius minima dolore ratione est reprehenderit asperiores cupiditate beatae, <div class="class">id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.eatae, id ea possimus dolores neque.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit, aspernatur commodi sapiente quis reiciendis provident natus! Magnam a corrupti consequatur harum nesciunt incidunt eum et quam quis, nemo, nostrum repudiandae? Nulla reprehenderit suscipit nam autem fugiat! Beatae officia eligendi, asperiores quidem quaerat ea aut eos labore voluptatem esse doloribus nemo ducimus laborum facere cumque iure tempora! Perferendis porro aliquid placeat magnam ipsam ducimus nemo vero sed, aliquam quo fugit id, recusandae fuga ipsa et excepturi ea illo atque architecto. Ullam corrupti nulla nobis. Quidem reprehenderit voluptatibus sint aspernatur dolor beatae sed harum iste, provident soluta exercitationem obcaecati fugiat qui impedit magni. Magnam quo vitae minus similique? Autem reprehenderit officia totam alias! Odit a repellat rem qui laudantium labore facere molestiae libero nihil ipsum incidunt temporibus debitis alias ea accusamus ullam, eveniet fugit quis. Adipisci iure vitae aliquam labore animi ad eaque voluptate exercitationem, 
+        officiis voluptatum nesciunt dignissimos consectetur? Veritatis, praesentium. Voluptatibus neque voluptatum ex sint architecto rerum cupiditate aliquid officia recusandae, tenetur totam voluptate vitae fuga magni ullam quas, rem odio impedit consequatur mollitia, aspernatur quam quia. Velit nemo, quia quis fugit iure, exercitationem, corporis cupiditate quidem nostrum consectetur blanditiis reprehenderit sit nobis quos tempora? Obcaecati perspiciatis provident molestiae, blanditiis dolorum consequatur possimus sint temporibus sequi optio natus architecto iure et eius corrupti magni saepe non doloremque quidem doloribus rem nihil. Modi ipsa dolorum ratione repellendus sapiente at aspernatur, error quis ea. Repellat, natus at! Quis commodi tempore neque aut autem veritatis facere architecto at magnam distinctio officia, enim atque, nulla praesentium, asperiores assumenda inventore placeat ut quia repudiandae cum dolore repellat harum.<div class="clearfix">Fugiat obcaecati optio amet totam officiis ad delectus, expedita quae facilis eaque vitae sit ex modi, corporis itaque quisquam aliquam beatae ullam corrupti consequuntur omnis iusto nesciunt dolorum ipsum. Quod quas nesciunt numquam dolore vitae eveniet blanditiis.</div>
     </article>
 </body>
 </html>
