--- a/float/float8.html
+++ b/float/float8.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
+      *{
+          margin: 0;
+          padding: 0;
       }
-      nav {
-        background-color: #333;
+      nav{
+          background-color: #333;
       }
       nav ul {
         float: left;
       }
-      nav ul li {
-        display: inline-block;
-        list-style: none;
-        padding: 5px;
-        line-height: 60px;
-        margin-left: 20px;
+      nav ul li{
+          display: inline-block;
+          list-style: none;
+          padding: 5px;
+          line-height: 60px;
+          margin-left: 20px;
       }
-      a {
-        background-color: white;
+      a{
+          color:white;
       }
-      a:link {
-        text-decoration: none;
-        color: black;
+      a:link{
+          text-decoration: none;
+      }      
+      li:hover{
+          background-color: blueviolet;
       }
-      li:hover {
-        background-color: blueviolet;
-      }
-      .clearfix::after {
+      .clearfix::after{
         content: "";
-        clear: both;
         display: block;
+        clear:both;
       }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <nav class="clearfix">
-      <ul>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">SiteMap</a></li>
-        <li><a href="#">Location</a></li>
-      </ul>
+        <ul >
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Join</a></li>
+            <li><a href="#">SiteMap</a></li>
+            <li><a href="#">Location</a></li>
+        </ul>
     </nav>
-  </body>
+</body>
 </html>
