--- a/float/float2.html
+++ b/float/float2.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      .box {
-        width: 150px;
-        height: 100px;
-        background-color: skyblue;
-        color: white;
-        font-size: 30px;
-        margin: 10px;
-        float: left;
-      }
-
-      .box4 {
-        width: 150px;
-        height: 100px;
-        background-color: red;
-        color: white;
-        font-size: 30px;
-        margin: 10px;
-        float: left;
-      }
+        .box{
+            width: 150px;
+            height: 100px;
+            background-color: skyblue;
+            color: white;
+            font-size: 30px;
+            margin: 10px;
+            float: left;
+        }
+        .box4{
+            width: 500px;
+            height: 300px;
+            background-color: tomato;
+            color: white;
+            font-size: 30px;
+            margin: 10px;
+            clear: left;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="box">1</div>
     <div class="box">2</div>
     <div class="box">3</div>
     <div class="box4">4</div>
-  </body>
+</body>
 </html>
