--- a/float/float4.html
+++ b/float/float4.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      /* 배경색/글자색상/margin */
-      span {
-        background-color: yellow;
-        color: red;
-        margin: 10px solid;
-        float: left;
-        width: 50px;
-        height: 50px;
-      }
+        /* 배경색 / 글자색상 / margin */
+        span{
+            background-color: blue;
+            color: white;
+            margin: 10px;
+            float: left;
+            width: 50px;
+            height: 50px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <span>1</span>
     <span>2</span>
     <span>3</span>
-  </body>
+</body>
+</body2
+</body3
 </html>
